[package]
authors = [ "c1m50c <https://github.com/c1m50c>" ]
name = "portfolio"
version = "0.1.0"
edition = "2021"


[dependencies]
components = { version = "0.1.0", path="crates/components" }
types = { version = "0.1.0", path="crates/types" }
yew = { version = "0.20.0", features = [ "csr" ] }


[workspace]
members = [
    "crates/components",
    "crates/types"
]
